--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@types/canvas-confetti": "^1.9.0",
     "concurrently": "^9.2.0"
   },
   "dependencies": {
@@ -22,6 +23,7 @@
     "@supabase/auth-ui-shared": "^0.1.8",
     "@supabase/supabase-js": "^2.57.0",
     "@tailwindcss/typography": "^0.5.16",
+    "canvas-confetti": "^1.9.3",
     "framer-motion": "^12.23.12",
     "lucide-react": "^0.542.0"
   }
