--- a/client/package.json
+++ b/client/package.json
@@ -9,13 +9,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-three/drei": "^9.56.0",
+    "@react-three/fiber": "^8.15.19",
     "axios": "^1.7.2",
     "cesium": "^1.119.0",
+    "framer-motion": "^12.23.12",
+    "lucide-react": "^0.544.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^7.8.2",
     "resium": "^1.16.1",
     "socket.io-client": "^4.7.5",
+    "three": "^0.160.0",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
