--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "type": "module",
   "scripts": {
     
-    "dev": "tsx watch src/index.ts",
+    "dev": "tsx watch src/server.ts",
     "seed": "tsx src/seed/seed.ts"
   },
   "dependencies": {
