--- a/client/package.json
+++ b/client/package.json
@@ -9,14 +9,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@react-three/drei": "^9.56.0",
-    "@react-three/fiber": "^8.15.19",
+    "@react-three/drei": "^10.7.6",
+    "@react-three/fiber": "^9.3.0",
+    "@react-three/rapier": "^2.1.0",
+    "@zip.js/zip.js": "^2.7.41",
     "axios": "^1.7.2",
     "cesium": "^1.119.0",
     "framer-motion": "^12.23.12",
     "lucide-react": "^0.544.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "react-router-dom": "^7.8.2",
     "resium": "^1.16.1",
     "socket.io-client": "^4.7.5",
@@ -24,6 +26,7 @@
     "zustand": "^4.5.2"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.19",
     "@types/react": "^18.2.74",
     "@types/react-dom": "^18.2.24",
     "@vitejs/plugin-react": "^4.2.1",
