--- a/server/package.json
+++ b/server/package.json
@@ -3,7 +3,6 @@
   "version": "0.1.0",
   "type": "module",
   "scripts": {
-    
     "dev": "tsx watch src/server.ts",
     "seed": "tsx src/seed/seed.ts"
   },
@@ -14,6 +13,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
+    "jwks-rsa": "^3.2.0",
     "mongoose": "^8.5.0",
     "morgan": "^1.10.0",
     "socket.io": "^4.7.5",
