install supabase-js and canvas-confetti in client

--- a/client/package.json
+++ b/client/package.json
@@ -12,8 +12,10 @@
     "@react-three/drei": "^10.7.6",
     "@react-three/fiber": "^9.3.0",
     "@react-three/rapier": "^2.1.0",
+    "@supabase/supabase-js": "^2.86.0",
     "@zip.js/zip.js": "^2.7.41",
     "axios": "^1.7.2",
+    "canvas-confetti": "^1.9.4",
     "cesium": "^1.119.0",
     "framer-motion": "^12.23.12",
     "lucide-react": "^0.544.0",
