Added Learning hubs and fixed mentor onboarding

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "description": "",
   "devDependencies": {
     "@types/canvas-confetti": "^1.9.0",
+    "baseline-browser-mapping": "^2.9.11",
     "concurrently": "^9.2.0"
   },
   "dependencies": {
