--- a/server/package.json
+++ b/server/package.json
@@ -19,7 +19,7 @@
     "jwks-rsa": "^3.2.0",
     "mongoose": "^8.5.0",
     "morgan": "^1.10.0",
-    "socket.io": "^4.7.5",
+    "socket.io": "^4.8.1",
     "zod": "^3.23.8"
   },
   "devDependencies": {
@@ -30,6 +30,7 @@
     "@types/jsonwebtoken": "^9.0.6",
     "@types/morgan": "^1.9.9",
     "@types/node": "^20.12.12",
+    "@types/socket.io": "^3.0.1",
     "ts-node-dev": "^2.0.0",
     "tsx": "^4.20.4",
     "typescript": "^5.4.5"
